// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventListPresenter /> when filtered 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventListPresenter
    activeId={1}
    events={
        Array [
            Object {
              "clientId": 1,
              "createdAt": 1529336865706,
              "id": 1,
              "integrationId": 1,
              "modifiedAt": 1529336865706,
              "name": "Some Event",
              "seasonId": 1,
              "timestamp": 1529336865706,
              "venueId": 1,
            },
            Object {
              "clientId": 1,
              "createdAt": 1529336865706,
              "id": 1,
              "integrationId": 1,
              "modifiedAt": 1529336865706,
              "name": "Some Event",
              "seasonId": 1,
              "timestamp": 1529336865706,
              "venueId": 1,
            },
            Object {
              "clientId": 1,
              "createdAt": 1529336865706,
              "id": 1,
              "integrationId": 1,
              "modifiedAt": 1529336865706,
              "name": "Some Event",
              "seasonId": 1,
              "timestamp": 1529336865706,
              "venueId": 1,
            },
          ]
    }
    filter="Query"
    filterOptions={
        Array [
            Object {
              "id": 1,
              "label": "one",
            },
          ]
    }
    loading={false}
    onClick={[Function]}
    onFilterSelect={[Function]}
    onSearchInputChange={[Function]}
    onTimestampSortChange={[Function]}
    selectedFilter={0}
    timestampSort="asc"
    title="title"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div
                    padding="24px 40px"
          >
                    <styled.h4>
                              title
                    </styled.h4>
                    <styled.div
                              height="4px"
                    />
                    <styled.input
                              data-test-id="event-list-search"
                              onChange={[Function]}
                              placeholder="Search"
                              type="text"
                              value="Query"
                    />
          </styled.div>
</styled.div>,
        false,
        <styled.div>
          <ScrollableList
                    data={
                              Array [
                                        Object {
                                          "clientId": 1,
                                          "createdAt": 1529336865706,
                                          "id": 1,
                                          "integrationId": 1,
                                          "modifiedAt": 1529336865706,
                                          "name": "Some Event",
                                          "seasonId": 1,
                                          "timestamp": 1529336865706,
                                          "venueId": 1,
                                        },
                                        Object {
                                          "clientId": 1,
                                          "createdAt": 1529336865706,
                                          "id": 1,
                                          "integrationId": 1,
                                          "modifiedAt": 1529336865706,
                                          "name": "Some Event",
                                          "seasonId": 1,
                                          "timestamp": 1529336865706,
                                          "venueId": 1,
                                        },
                                        Object {
                                          "clientId": 1,
                                          "createdAt": 1529336865706,
                                          "id": 1,
                                          "integrationId": 1,
                                          "modifiedAt": 1529336865706,
                                          "name": "Some Event",
                                          "seasonId": 1,
                                          "timestamp": 1529336865706,
                                          "venueId": 1,
                                        },
                                      ]
                    }
                    scrollIndex={0}
          >
                    [Function]
          </ScrollableList>
</styled.div>,
      ],
      "direction": "column",
      "height": "100%",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.div
            padding="24px 40px"
>
            <styled.h4>
                        title
            </styled.h4>
            <styled.div
                        height="4px"
            />
            <styled.input
                        data-test-id="event-list-search"
                        onChange={[Function]}
                        placeholder="Search"
                        type="text"
                        value="Query"
            />
</styled.div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.h4>
                title
</styled.h4>,
              <styled.div
                height="4px"
/>,
              <styled.input
                data-test-id="event-list-search"
                onChange={[Function]}
                placeholder="Search"
                type="text"
                value="Query"
/>,
            ],
            "padding": "24px 40px",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "title",
              },
              "ref": null,
              "rendered": "title",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "height": "4px",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "data-test-id": "event-list-search",
                "onChange": [Function],
                "placeholder": "Search",
                "type": "text",
                "value": "Query",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ScrollableList
            data={
                        Array [
                                    Object {
                                      "clientId": 1,
                                      "createdAt": 1529336865706,
                                      "id": 1,
                                      "integrationId": 1,
                                      "modifiedAt": 1529336865706,
                                      "name": "Some Event",
                                      "seasonId": 1,
                                      "timestamp": 1529336865706,
                                      "venueId": 1,
                                    },
                                    Object {
                                      "clientId": 1,
                                      "createdAt": 1529336865706,
                                      "id": 1,
                                      "integrationId": 1,
                                      "modifiedAt": 1529336865706,
                                      "name": "Some Event",
                                      "seasonId": 1,
                                      "timestamp": 1529336865706,
                                      "venueId": 1,
                                    },
                                    Object {
                                      "clientId": 1,
                                      "createdAt": 1529336865706,
                                      "id": 1,
                                      "integrationId": 1,
                                      "modifiedAt": 1529336865706,
                                      "name": "Some Event",
                                      "seasonId": 1,
                                      "timestamp": 1529336865706,
                                      "venueId": 1,
                                    },
                                  ]
            }
            scrollIndex={0}
>
            [Function]
</ScrollableList>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": [Function],
            "data": Array [
              Object {
                "clientId": 1,
                "createdAt": 1529336865706,
                "id": 1,
                "integrationId": 1,
                "modifiedAt": 1529336865706,
                "name": "Some Event",
                "seasonId": 1,
                "timestamp": 1529336865706,
                "venueId": 1,
              },
              Object {
                "clientId": 1,
                "createdAt": 1529336865706,
                "id": 1,
                "integrationId": 1,
                "modifiedAt": 1529336865706,
                "name": "Some Event",
                "seasonId": 1,
                "timestamp": 1529336865706,
                "venueId": 1,
              },
              Object {
                "clientId": 1,
                "createdAt": 1529336865706,
                "id": 1,
                "integrationId": 1,
                "modifiedAt": 1529336865706,
                "name": "Some Event",
                "seasonId": 1,
                "timestamp": 1529336865706,
                "venueId": 1,
              },
            ],
            "scrollIndex": 0,
          },
          "ref": null,
          "rendered": [Function],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div
                        padding="24px 40px"
            >
                        <styled.h4>
                                    title
                        </styled.h4>
                        <styled.div
                                    height="4px"
                        />
                        <styled.input
                                    data-test-id="event-list-search"
                                    onChange={[Function]}
                                    placeholder="Search"
                                    type="text"
                                    value="Query"
                        />
            </styled.div>
</styled.div>,
          false,
          <styled.div>
            <ScrollableList
                        data={
                                    Array [
                                                Object {
                                                  "clientId": 1,
                                                  "createdAt": 1529336865706,
                                                  "id": 1,
                                                  "integrationId": 1,
                                                  "modifiedAt": 1529336865706,
                                                  "name": "Some Event",
                                                  "seasonId": 1,
                                                  "timestamp": 1529336865706,
                                                  "venueId": 1,
                                                },
                                                Object {
                                                  "clientId": 1,
                                                  "createdAt": 1529336865706,
                                                  "id": 1,
                                                  "integrationId": 1,
                                                  "modifiedAt": 1529336865706,
                                                  "name": "Some Event",
                                                  "seasonId": 1,
                                                  "timestamp": 1529336865706,
                                                  "venueId": 1,
                                                },
                                                Object {
                                                  "clientId": 1,
                                                  "createdAt": 1529336865706,
                                                  "id": 1,
                                                  "integrationId": 1,
                                                  "modifiedAt": 1529336865706,
                                                  "name": "Some Event",
                                                  "seasonId": 1,
                                                  "timestamp": 1529336865706,
                                                  "venueId": 1,
                                                },
                                              ]
                        }
                        scrollIndex={0}
            >
                        [Function]
            </ScrollableList>
</styled.div>,
        ],
        "direction": "column",
        "height": "100%",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.div
              padding="24px 40px"
>
              <styled.h4>
                            title
              </styled.h4>
              <styled.div
                            height="4px"
              />
              <styled.input
                            data-test-id="event-list-search"
                            onChange={[Function]}
                            placeholder="Search"
                            type="text"
                            value="Query"
              />
</styled.div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.h4>
                  title
</styled.h4>,
                <styled.div
                  height="4px"
/>,
                <styled.input
                  data-test-id="event-list-search"
                  onChange={[Function]}
                  placeholder="Search"
                  type="text"
                  value="Query"
/>,
              ],
              "padding": "24px 40px",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "title",
                },
                "ref": null,
                "rendered": "title",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "height": "4px",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "data-test-id": "event-list-search",
                  "onChange": [Function],
                  "placeholder": "Search",
                  "type": "text",
                  "value": "Query",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ScrollableList
              data={
                            Array [
                                          Object {
                                            "clientId": 1,
                                            "createdAt": 1529336865706,
                                            "id": 1,
                                            "integrationId": 1,
                                            "modifiedAt": 1529336865706,
                                            "name": "Some Event",
                                            "seasonId": 1,
                                            "timestamp": 1529336865706,
                                            "venueId": 1,
                                          },
                                          Object {
                                            "clientId": 1,
                                            "createdAt": 1529336865706,
                                            "id": 1,
                                            "integrationId": 1,
                                            "modifiedAt": 1529336865706,
                                            "name": "Some Event",
                                            "seasonId": 1,
                                            "timestamp": 1529336865706,
                                            "venueId": 1,
                                          },
                                          Object {
                                            "clientId": 1,
                                            "createdAt": 1529336865706,
                                            "id": 1,
                                            "integrationId": 1,
                                            "modifiedAt": 1529336865706,
                                            "name": "Some Event",
                                            "seasonId": 1,
                                            "timestamp": 1529336865706,
                                            "venueId": 1,
                                          },
                                        ]
              }
              scrollIndex={0}
>
              [Function]
</ScrollableList>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": [Function],
              "data": Array [
                Object {
                  "clientId": 1,
                  "createdAt": 1529336865706,
                  "id": 1,
                  "integrationId": 1,
                  "modifiedAt": 1529336865706,
                  "name": "Some Event",
                  "seasonId": 1,
                  "timestamp": 1529336865706,
                  "venueId": 1,
                },
                Object {
                  "clientId": 1,
                  "createdAt": 1529336865706,
                  "id": 1,
                  "integrationId": 1,
                  "modifiedAt": 1529336865706,
                  "name": "Some Event",
                  "seasonId": 1,
                  "timestamp": 1529336865706,
                  "venueId": 1,
                },
                Object {
                  "clientId": 1,
                  "createdAt": 1529336865706,
                  "id": 1,
                  "integrationId": 1,
                  "modifiedAt": 1529336865706,
                  "name": "Some Event",
                  "seasonId": 1,
                  "timestamp": 1529336865706,
                  "venueId": 1,
                },
              ],
              "scrollIndex": 0,
            },
            "ref": null,
            "rendered": [Function],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<EventListPresenter /> when loading 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventListPresenter
    activeId={1}
    events={
        Array [
            Object {
              "clientId": 1,
              "createdAt": 1529336865706,
              "id": 1,
              "integrationId": 1,
              "modifiedAt": 1529336865706,
              "name": "Some Event",
              "seasonId": 1,
              "timestamp": 1529336865706,
              "venueId": 1,
            },
            Object {
              "clientId": 1,
              "createdAt": 1529336865706,
              "id": 1,
              "integrationId": 1,
              "modifiedAt": 1529336865706,
              "name": "Some Event",
              "seasonId": 1,
              "timestamp": 1529336865706,
              "venueId": 1,
            },
            Object {
              "clientId": 1,
              "createdAt": 1529336865706,
              "id": 1,
              "integrationId": 1,
              "modifiedAt": 1529336865706,
              "name": "Some Event",
              "seasonId": 1,
              "timestamp": 1529336865706,
              "venueId": 1,
            },
          ]
    }
    filter=""
    filterOptions={
        Array [
            Object {
              "id": 1,
              "label": "one",
            },
          ]
    }
    loading={true}
    onClick={[Function]}
    onFilterSelect={[Function]}
    onSearchInputChange={[Function]}
    onTimestampSortChange={[Function]}
    selectedFilter={0}
    timestampSort="asc"
    title="title"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div
                    padding="24px 40px"
          >
                    <styled.h4>
                              title
                    </styled.h4>
                    <styled.div
                              height="4px"
                    />
                    <styled.input
                              data-test-id="event-list-search"
                              onChange={[Function]}
                              placeholder="Search"
                              type="text"
                              value=""
                    />
          </styled.div>
</styled.div>,
        false,
        <styled.div>
          <ScrollableList
                    data={
                              Array [
                                        Object {
                                          "clientId": 1,
                                          "createdAt": 1529336865706,
                                          "id": 1,
                                          "integrationId": 1,
                                          "modifiedAt": 1529336865706,
                                          "name": "Some Event",
                                          "seasonId": 1,
                                          "timestamp": 1529336865706,
                                          "venueId": 1,
                                        },
                                        Object {
                                          "clientId": 1,
                                          "createdAt": 1529336865706,
                                          "id": 1,
                                          "integrationId": 1,
                                          "modifiedAt": 1529336865706,
                                          "name": "Some Event",
                                          "seasonId": 1,
                                          "timestamp": 1529336865706,
                                          "venueId": 1,
                                        },
                                        Object {
                                          "clientId": 1,
                                          "createdAt": 1529336865706,
                                          "id": 1,
                                          "integrationId": 1,
                                          "modifiedAt": 1529336865706,
                                          "name": "Some Event",
                                          "seasonId": 1,
                                          "timestamp": 1529336865706,
                                          "venueId": 1,
                                        },
                                      ]
                    }
                    scrollIndex={0}
          >
                    [Function]
          </ScrollableList>
</styled.div>,
      ],
      "direction": "column",
      "height": "100%",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.div
            padding="24px 40px"
>
            <styled.h4>
                        title
            </styled.h4>
            <styled.div
                        height="4px"
            />
            <styled.input
                        data-test-id="event-list-search"
                        onChange={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
            />
</styled.div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.h4>
                title
</styled.h4>,
              <styled.div
                height="4px"
/>,
              <styled.input
                data-test-id="event-list-search"
                onChange={[Function]}
                placeholder="Search"
                type="text"
                value=""
/>,
            ],
            "padding": "24px 40px",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "title",
              },
              "ref": null,
              "rendered": "title",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "height": "4px",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "data-test-id": "event-list-search",
                "onChange": [Function],
                "placeholder": "Search",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ScrollableList
            data={
                        Array [
                                    Object {
                                      "clientId": 1,
                                      "createdAt": 1529336865706,
                                      "id": 1,
                                      "integrationId": 1,
                                      "modifiedAt": 1529336865706,
                                      "name": "Some Event",
                                      "seasonId": 1,
                                      "timestamp": 1529336865706,
                                      "venueId": 1,
                                    },
                                    Object {
                                      "clientId": 1,
                                      "createdAt": 1529336865706,
                                      "id": 1,
                                      "integrationId": 1,
                                      "modifiedAt": 1529336865706,
                                      "name": "Some Event",
                                      "seasonId": 1,
                                      "timestamp": 1529336865706,
                                      "venueId": 1,
                                    },
                                    Object {
                                      "clientId": 1,
                                      "createdAt": 1529336865706,
                                      "id": 1,
                                      "integrationId": 1,
                                      "modifiedAt": 1529336865706,
                                      "name": "Some Event",
                                      "seasonId": 1,
                                      "timestamp": 1529336865706,
                                      "venueId": 1,
                                    },
                                  ]
            }
            scrollIndex={0}
>
            [Function]
</ScrollableList>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": [Function],
            "data": Array [
              Object {
                "clientId": 1,
                "createdAt": 1529336865706,
                "id": 1,
                "integrationId": 1,
                "modifiedAt": 1529336865706,
                "name": "Some Event",
                "seasonId": 1,
                "timestamp": 1529336865706,
                "venueId": 1,
              },
              Object {
                "clientId": 1,
                "createdAt": 1529336865706,
                "id": 1,
                "integrationId": 1,
                "modifiedAt": 1529336865706,
                "name": "Some Event",
                "seasonId": 1,
                "timestamp": 1529336865706,
                "venueId": 1,
              },
              Object {
                "clientId": 1,
                "createdAt": 1529336865706,
                "id": 1,
                "integrationId": 1,
                "modifiedAt": 1529336865706,
                "name": "Some Event",
                "seasonId": 1,
                "timestamp": 1529336865706,
                "venueId": 1,
              },
            ],
            "scrollIndex": 0,
          },
          "ref": null,
          "rendered": [Function],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div
                        padding="24px 40px"
            >
                        <styled.h4>
                                    title
                        </styled.h4>
                        <styled.div
                                    height="4px"
                        />
                        <styled.input
                                    data-test-id="event-list-search"
                                    onChange={[Function]}
                                    placeholder="Search"
                                    type="text"
                                    value=""
                        />
            </styled.div>
</styled.div>,
          false,
          <styled.div>
            <ScrollableList
                        data={
                                    Array [
                                                Object {
                                                  "clientId": 1,
                                                  "createdAt": 1529336865706,
                                                  "id": 1,
                                                  "integrationId": 1,
                                                  "modifiedAt": 1529336865706,
                                                  "name": "Some Event",
                                                  "seasonId": 1,
                                                  "timestamp": 1529336865706,
                                                  "venueId": 1,
                                                },
                                                Object {
                                                  "clientId": 1,
                                                  "createdAt": 1529336865706,
                                                  "id": 1,
                                                  "integrationId": 1,
                                                  "modifiedAt": 1529336865706,
                                                  "name": "Some Event",
                                                  "seasonId": 1,
                                                  "timestamp": 1529336865706,
                                                  "venueId": 1,
                                                },
                                                Object {
                                                  "clientId": 1,
                                                  "createdAt": 1529336865706,
                                                  "id": 1,
                                                  "integrationId": 1,
                                                  "modifiedAt": 1529336865706,
                                                  "name": "Some Event",
                                                  "seasonId": 1,
                                                  "timestamp": 1529336865706,
                                                  "venueId": 1,
                                                },
                                              ]
                        }
                        scrollIndex={0}
            >
                        [Function]
            </ScrollableList>
</styled.div>,
        ],
        "direction": "column",
        "height": "100%",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.div
              padding="24px 40px"
>
              <styled.h4>
                            title
              </styled.h4>
              <styled.div
                            height="4px"
              />
              <styled.input
                            data-test-id="event-list-search"
                            onChange={[Function]}
                            placeholder="Search"
                            type="text"
                            value=""
              />
</styled.div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.h4>
                  title
</styled.h4>,
                <styled.div
                  height="4px"
/>,
                <styled.input
                  data-test-id="event-list-search"
                  onChange={[Function]}
                  placeholder="Search"
                  type="text"
                  value=""
/>,
              ],
              "padding": "24px 40px",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "title",
                },
                "ref": null,
                "rendered": "title",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "height": "4px",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "data-test-id": "event-list-search",
                  "onChange": [Function],
                  "placeholder": "Search",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ScrollableList
              data={
                            Array [
                                          Object {
                                            "clientId": 1,
                                            "createdAt": 1529336865706,
                                            "id": 1,
                                            "integrationId": 1,
                                            "modifiedAt": 1529336865706,
                                            "name": "Some Event",
                                            "seasonId": 1,
                                            "timestamp": 1529336865706,
                                            "venueId": 1,
                                          },
                                          Object {
                                            "clientId": 1,
                                            "createdAt": 1529336865706,
                                            "id": 1,
                                            "integrationId": 1,
                                            "modifiedAt": 1529336865706,
                                            "name": "Some Event",
                                            "seasonId": 1,
                                            "timestamp": 1529336865706,
                                            "venueId": 1,
                                          },
                                          Object {
                                            "clientId": 1,
                                            "createdAt": 1529336865706,
                                            "id": 1,
                                            "integrationId": 1,
                                            "modifiedAt": 1529336865706,
                                            "name": "Some Event",
                                            "seasonId": 1,
                                            "timestamp": 1529336865706,
                                            "venueId": 1,
                                          },
                                        ]
              }
              scrollIndex={0}
>
              [Function]
</ScrollableList>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": [Function],
              "data": Array [
                Object {
                  "clientId": 1,
                  "createdAt": 1529336865706,
                  "id": 1,
                  "integrationId": 1,
                  "modifiedAt": 1529336865706,
                  "name": "Some Event",
                  "seasonId": 1,
                  "timestamp": 1529336865706,
                  "venueId": 1,
                },
                Object {
                  "clientId": 1,
                  "createdAt": 1529336865706,
                  "id": 1,
                  "integrationId": 1,
                  "modifiedAt": 1529336865706,
                  "name": "Some Event",
                  "seasonId": 1,
                  "timestamp": 1529336865706,
                  "venueId": 1,
                },
                Object {
                  "clientId": 1,
                  "createdAt": 1529336865706,
                  "id": 1,
                  "integrationId": 1,
                  "modifiedAt": 1529336865706,
                  "name": "Some Event",
                  "seasonId": 1,
                  "timestamp": 1529336865706,
                  "venueId": 1,
                },
              ],
              "scrollIndex": 0,
            },
            "ref": null,
            "rendered": [Function],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<EventListPresenter /> when passed no events 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventListPresenter
    activeId={1}
    events={Array []}
    filter=""
    filterOptions={
        Array [
            Object {
              "id": 1,
              "label": "one",
            },
          ]
    }
    loading={false}
    onClick={[Function]}
    onFilterSelect={[Function]}
    onSearchInputChange={[Function]}
    onTimestampSortChange={[Function]}
    selectedFilter={0}
    timestampSort="asc"
    title="title"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div
                    padding="24px 40px"
          >
                    <styled.h4>
                              title
                    </styled.h4>
                    <styled.div
                              height="4px"
                    />
                    <styled.input
                              data-test-id="event-list-search"
                              onChange={[Function]}
                              placeholder="Search"
                              type="text"
                              value=""
                    />
          </styled.div>
</styled.div>,
        <styled.div>
          <styled.h4
                    data-test-id="no-events-message"
          >
                    No events matching query
          </styled.h4>
</styled.div>,
        false,
      ],
      "direction": "column",
      "height": "100%",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.div
            padding="24px 40px"
>
            <styled.h4>
                        title
            </styled.h4>
            <styled.div
                        height="4px"
            />
            <styled.input
                        data-test-id="event-list-search"
                        onChange={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
            />
</styled.div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.h4>
                title
</styled.h4>,
              <styled.div
                height="4px"
/>,
              <styled.input
                data-test-id="event-list-search"
                onChange={[Function]}
                placeholder="Search"
                type="text"
                value=""
/>,
            ],
            "padding": "24px 40px",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "title",
              },
              "ref": null,
              "rendered": "title",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "height": "4px",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "data-test-id": "event-list-search",
                "onChange": [Function],
                "placeholder": "Search",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.h4
            data-test-id="no-events-message"
>
            No events matching query
</styled.h4>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "No events matching query",
            "data-test-id": "no-events-message",
          },
          "ref": null,
          "rendered": "No events matching query",
          "type": [Function],
        },
        "type": [Function],
      },
      false,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div
                        padding="24px 40px"
            >
                        <styled.h4>
                                    title
                        </styled.h4>
                        <styled.div
                                    height="4px"
                        />
                        <styled.input
                                    data-test-id="event-list-search"
                                    onChange={[Function]}
                                    placeholder="Search"
                                    type="text"
                                    value=""
                        />
            </styled.div>
</styled.div>,
          <styled.div>
            <styled.h4
                        data-test-id="no-events-message"
            >
                        No events matching query
            </styled.h4>
</styled.div>,
          false,
        ],
        "direction": "column",
        "height": "100%",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.div
              padding="24px 40px"
>
              <styled.h4>
                            title
              </styled.h4>
              <styled.div
                            height="4px"
              />
              <styled.input
                            data-test-id="event-list-search"
                            onChange={[Function]}
                            placeholder="Search"
                            type="text"
                            value=""
              />
</styled.div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.h4>
                  title
</styled.h4>,
                <styled.div
                  height="4px"
/>,
                <styled.input
                  data-test-id="event-list-search"
                  onChange={[Function]}
                  placeholder="Search"
                  type="text"
                  value=""
/>,
              ],
              "padding": "24px 40px",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "title",
                },
                "ref": null,
                "rendered": "title",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "height": "4px",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "data-test-id": "event-list-search",
                  "onChange": [Function],
                  "placeholder": "Search",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.h4
              data-test-id="no-events-message"
>
              No events matching query
</styled.h4>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "No events matching query",
              "data-test-id": "no-events-message",
            },
            "ref": null,
            "rendered": "No events matching query",
            "type": [Function],
          },
          "type": [Function],
        },
        false,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<EventListPresenter /> with active event 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventListPresenter
    activeId={1}
    events={
        Array [
            Object {
              "clientId": 1,
              "createdAt": 1529336865706,
              "id": 1,
              "integrationId": 1,
              "modifiedAt": 1529336865706,
              "name": "Some Event",
              "seasonId": 1,
              "timestamp": 1529336865706,
              "venueId": 1,
            },
            Object {
              "clientId": 1,
              "createdAt": 1529336865706,
              "id": 1,
              "integrationId": 1,
              "modifiedAt": 1529336865706,
              "name": "Some Event",
              "seasonId": 1,
              "timestamp": 1529336865706,
              "venueId": 1,
            },
            Object {
              "clientId": 1,
              "createdAt": 1529336865706,
              "id": 1,
              "integrationId": 1,
              "modifiedAt": 1529336865706,
              "name": "Some Event",
              "seasonId": 1,
              "timestamp": 1529336865706,
              "venueId": 1,
            },
          ]
    }
    filter=""
    filterOptions={
        Array [
            Object {
              "id": 1,
              "label": "one",
            },
          ]
    }
    loading={false}
    onClick={[Function]}
    onFilterSelect={[Function]}
    onSearchInputChange={[Function]}
    onTimestampSortChange={[Function]}
    selectedFilter={0}
    timestampSort="asc"
    title="title"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div
                    padding="24px 40px"
          >
                    <styled.h4>
                              title
                    </styled.h4>
                    <styled.div
                              height="4px"
                    />
                    <styled.input
                              data-test-id="event-list-search"
                              onChange={[Function]}
                              placeholder="Search"
                              type="text"
                              value=""
                    />
          </styled.div>
</styled.div>,
        false,
        <styled.div>
          <ScrollableList
                    data={
                              Array [
                                        Object {
                                          "clientId": 1,
                                          "createdAt": 1529336865706,
                                          "id": 1,
                                          "integrationId": 1,
                                          "modifiedAt": 1529336865706,
                                          "name": "Some Event",
                                          "seasonId": 1,
                                          "timestamp": 1529336865706,
                                          "venueId": 1,
                                        },
                                        Object {
                                          "clientId": 1,
                                          "createdAt": 1529336865706,
                                          "id": 1,
                                          "integrationId": 1,
                                          "modifiedAt": 1529336865706,
                                          "name": "Some Event",
                                          "seasonId": 1,
                                          "timestamp": 1529336865706,
                                          "venueId": 1,
                                        },
                                        Object {
                                          "clientId": 1,
                                          "createdAt": 1529336865706,
                                          "id": 1,
                                          "integrationId": 1,
                                          "modifiedAt": 1529336865706,
                                          "name": "Some Event",
                                          "seasonId": 1,
                                          "timestamp": 1529336865706,
                                          "venueId": 1,
                                        },
                                      ]
                    }
                    scrollIndex={0}
          >
                    [Function]
          </ScrollableList>
</styled.div>,
      ],
      "direction": "column",
      "height": "100%",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.div
            padding="24px 40px"
>
            <styled.h4>
                        title
            </styled.h4>
            <styled.div
                        height="4px"
            />
            <styled.input
                        data-test-id="event-list-search"
                        onChange={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
            />
</styled.div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.h4>
                title
</styled.h4>,
              <styled.div
                height="4px"
/>,
              <styled.input
                data-test-id="event-list-search"
                onChange={[Function]}
                placeholder="Search"
                type="text"
                value=""
/>,
            ],
            "padding": "24px 40px",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "title",
              },
              "ref": null,
              "rendered": "title",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "height": "4px",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "data-test-id": "event-list-search",
                "onChange": [Function],
                "placeholder": "Search",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ScrollableList
            data={
                        Array [
                                    Object {
                                      "clientId": 1,
                                      "createdAt": 1529336865706,
                                      "id": 1,
                                      "integrationId": 1,
                                      "modifiedAt": 1529336865706,
                                      "name": "Some Event",
                                      "seasonId": 1,
                                      "timestamp": 1529336865706,
                                      "venueId": 1,
                                    },
                                    Object {
                                      "clientId": 1,
                                      "createdAt": 1529336865706,
                                      "id": 1,
                                      "integrationId": 1,
                                      "modifiedAt": 1529336865706,
                                      "name": "Some Event",
                                      "seasonId": 1,
                                      "timestamp": 1529336865706,
                                      "venueId": 1,
                                    },
                                    Object {
                                      "clientId": 1,
                                      "createdAt": 1529336865706,
                                      "id": 1,
                                      "integrationId": 1,
                                      "modifiedAt": 1529336865706,
                                      "name": "Some Event",
                                      "seasonId": 1,
                                      "timestamp": 1529336865706,
                                      "venueId": 1,
                                    },
                                  ]
            }
            scrollIndex={0}
>
            [Function]
</ScrollableList>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": [Function],
            "data": Array [
              Object {
                "clientId": 1,
                "createdAt": 1529336865706,
                "id": 1,
                "integrationId": 1,
                "modifiedAt": 1529336865706,
                "name": "Some Event",
                "seasonId": 1,
                "timestamp": 1529336865706,
                "venueId": 1,
              },
              Object {
                "clientId": 1,
                "createdAt": 1529336865706,
                "id": 1,
                "integrationId": 1,
                "modifiedAt": 1529336865706,
                "name": "Some Event",
                "seasonId": 1,
                "timestamp": 1529336865706,
                "venueId": 1,
              },
              Object {
                "clientId": 1,
                "createdAt": 1529336865706,
                "id": 1,
                "integrationId": 1,
                "modifiedAt": 1529336865706,
                "name": "Some Event",
                "seasonId": 1,
                "timestamp": 1529336865706,
                "venueId": 1,
              },
            ],
            "scrollIndex": 0,
          },
          "ref": null,
          "rendered": [Function],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div
                        padding="24px 40px"
            >
                        <styled.h4>
                                    title
                        </styled.h4>
                        <styled.div
                                    height="4px"
                        />
                        <styled.input
                                    data-test-id="event-list-search"
                                    onChange={[Function]}
                                    placeholder="Search"
                                    type="text"
                                    value=""
                        />
            </styled.div>
</styled.div>,
          false,
          <styled.div>
            <ScrollableList
                        data={
                                    Array [
                                                Object {
                                                  "clientId": 1,
                                                  "createdAt": 1529336865706,
                                                  "id": 1,
                                                  "integrationId": 1,
                                                  "modifiedAt": 1529336865706,
                                                  "name": "Some Event",
                                                  "seasonId": 1,
                                                  "timestamp": 1529336865706,
                                                  "venueId": 1,
                                                },
                                                Object {
                                                  "clientId": 1,
                                                  "createdAt": 1529336865706,
                                                  "id": 1,
                                                  "integrationId": 1,
                                                  "modifiedAt": 1529336865706,
                                                  "name": "Some Event",
                                                  "seasonId": 1,
                                                  "timestamp": 1529336865706,
                                                  "venueId": 1,
                                                },
                                                Object {
                                                  "clientId": 1,
                                                  "createdAt": 1529336865706,
                                                  "id": 1,
                                                  "integrationId": 1,
                                                  "modifiedAt": 1529336865706,
                                                  "name": "Some Event",
                                                  "seasonId": 1,
                                                  "timestamp": 1529336865706,
                                                  "venueId": 1,
                                                },
                                              ]
                        }
                        scrollIndex={0}
            >
                        [Function]
            </ScrollableList>
</styled.div>,
        ],
        "direction": "column",
        "height": "100%",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.div
              padding="24px 40px"
>
              <styled.h4>
                            title
              </styled.h4>
              <styled.div
                            height="4px"
              />
              <styled.input
                            data-test-id="event-list-search"
                            onChange={[Function]}
                            placeholder="Search"
                            type="text"
                            value=""
              />
</styled.div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.h4>
                  title
</styled.h4>,
                <styled.div
                  height="4px"
/>,
                <styled.input
                  data-test-id="event-list-search"
                  onChange={[Function]}
                  placeholder="Search"
                  type="text"
                  value=""
/>,
              ],
              "padding": "24px 40px",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "title",
                },
                "ref": null,
                "rendered": "title",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "height": "4px",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "data-test-id": "event-list-search",
                  "onChange": [Function],
                  "placeholder": "Search",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ScrollableList
              data={
                            Array [
                                          Object {
                                            "clientId": 1,
                                            "createdAt": 1529336865706,
                                            "id": 1,
                                            "integrationId": 1,
                                            "modifiedAt": 1529336865706,
                                            "name": "Some Event",
                                            "seasonId": 1,
                                            "timestamp": 1529336865706,
                                            "venueId": 1,
                                          },
                                          Object {
                                            "clientId": 1,
                                            "createdAt": 1529336865706,
                                            "id": 1,
                                            "integrationId": 1,
                                            "modifiedAt": 1529336865706,
                                            "name": "Some Event",
                                            "seasonId": 1,
                                            "timestamp": 1529336865706,
                                            "venueId": 1,
                                          },
                                          Object {
                                            "clientId": 1,
                                            "createdAt": 1529336865706,
                                            "id": 1,
                                            "integrationId": 1,
                                            "modifiedAt": 1529336865706,
                                            "name": "Some Event",
                                            "seasonId": 1,
                                            "timestamp": 1529336865706,
                                            "venueId": 1,
                                          },
                                        ]
              }
              scrollIndex={0}
>
              [Function]
</ScrollableList>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": [Function],
              "data": Array [
                Object {
                  "clientId": 1,
                  "createdAt": 1529336865706,
                  "id": 1,
                  "integrationId": 1,
                  "modifiedAt": 1529336865706,
                  "name": "Some Event",
                  "seasonId": 1,
                  "timestamp": 1529336865706,
                  "venueId": 1,
                },
                Object {
                  "clientId": 1,
                  "createdAt": 1529336865706,
                  "id": 1,
                  "integrationId": 1,
                  "modifiedAt": 1529336865706,
                  "name": "Some Event",
                  "seasonId": 1,
                  "timestamp": 1529336865706,
                  "venueId": 1,
                },
                Object {
                  "clientId": 1,
                  "createdAt": 1529336865706,
                  "id": 1,
                  "integrationId": 1,
                  "modifiedAt": 1529336865706,
                  "name": "Some Event",
                  "seasonId": 1,
                  "timestamp": 1529336865706,
                  "venueId": 1,
                },
              ],
              "scrollIndex": 0,
            },
            "ref": null,
            "rendered": [Function],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<EventListPresenter /> with no active event 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventListPresenter
    activeId={-1}
    events={
        Array [
            Object {
              "clientId": 1,
              "createdAt": 1529336865706,
              "id": 1,
              "integrationId": 1,
              "modifiedAt": 1529336865706,
              "name": "Some Event",
              "seasonId": 1,
              "timestamp": 1529336865706,
              "venueId": 1,
            },
            Object {
              "clientId": 1,
              "createdAt": 1529336865706,
              "id": 1,
              "integrationId": 1,
              "modifiedAt": 1529336865706,
              "name": "Some Event",
              "seasonId": 1,
              "timestamp": 1529336865706,
              "venueId": 1,
            },
            Object {
              "clientId": 1,
              "createdAt": 1529336865706,
              "id": 1,
              "integrationId": 1,
              "modifiedAt": 1529336865706,
              "name": "Some Event",
              "seasonId": 1,
              "timestamp": 1529336865706,
              "venueId": 1,
            },
          ]
    }
    filter=""
    filterOptions={
        Array [
            Object {
              "id": 1,
              "label": "one",
            },
          ]
    }
    loading={false}
    onClick={[Function]}
    onFilterSelect={[Function]}
    onSearchInputChange={[Function]}
    onTimestampSortChange={[Function]}
    selectedFilter={0}
    timestampSort="asc"
    title="title"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div
                    padding="24px 40px"
          >
                    <styled.h4>
                              title
                    </styled.h4>
                    <styled.div
                              height="4px"
                    />
                    <styled.input
                              data-test-id="event-list-search"
                              onChange={[Function]}
                              placeholder="Search"
                              type="text"
                              value=""
                    />
          </styled.div>
</styled.div>,
        false,
        <styled.div>
          <ScrollableList
                    data={
                              Array [
                                        Object {
                                          "clientId": 1,
                                          "createdAt": 1529336865706,
                                          "id": 1,
                                          "integrationId": 1,
                                          "modifiedAt": 1529336865706,
                                          "name": "Some Event",
                                          "seasonId": 1,
                                          "timestamp": 1529336865706,
                                          "venueId": 1,
                                        },
                                        Object {
                                          "clientId": 1,
                                          "createdAt": 1529336865706,
                                          "id": 1,
                                          "integrationId": 1,
                                          "modifiedAt": 1529336865706,
                                          "name": "Some Event",
                                          "seasonId": 1,
                                          "timestamp": 1529336865706,
                                          "venueId": 1,
                                        },
                                        Object {
                                          "clientId": 1,
                                          "createdAt": 1529336865706,
                                          "id": 1,
                                          "integrationId": 1,
                                          "modifiedAt": 1529336865706,
                                          "name": "Some Event",
                                          "seasonId": 1,
                                          "timestamp": 1529336865706,
                                          "venueId": 1,
                                        },
                                      ]
                    }
                    scrollIndex={-1}
          >
                    [Function]
          </ScrollableList>
</styled.div>,
      ],
      "direction": "column",
      "height": "100%",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.div
            padding="24px 40px"
>
            <styled.h4>
                        title
            </styled.h4>
            <styled.div
                        height="4px"
            />
            <styled.input
                        data-test-id="event-list-search"
                        onChange={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
            />
</styled.div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.h4>
                title
</styled.h4>,
              <styled.div
                height="4px"
/>,
              <styled.input
                data-test-id="event-list-search"
                onChange={[Function]}
                placeholder="Search"
                type="text"
                value=""
/>,
            ],
            "padding": "24px 40px",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "title",
              },
              "ref": null,
              "rendered": "title",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "height": "4px",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "data-test-id": "event-list-search",
                "onChange": [Function],
                "placeholder": "Search",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ScrollableList
            data={
                        Array [
                                    Object {
                                      "clientId": 1,
                                      "createdAt": 1529336865706,
                                      "id": 1,
                                      "integrationId": 1,
                                      "modifiedAt": 1529336865706,
                                      "name": "Some Event",
                                      "seasonId": 1,
                                      "timestamp": 1529336865706,
                                      "venueId": 1,
                                    },
                                    Object {
                                      "clientId": 1,
                                      "createdAt": 1529336865706,
                                      "id": 1,
                                      "integrationId": 1,
                                      "modifiedAt": 1529336865706,
                                      "name": "Some Event",
                                      "seasonId": 1,
                                      "timestamp": 1529336865706,
                                      "venueId": 1,
                                    },
                                    Object {
                                      "clientId": 1,
                                      "createdAt": 1529336865706,
                                      "id": 1,
                                      "integrationId": 1,
                                      "modifiedAt": 1529336865706,
                                      "name": "Some Event",
                                      "seasonId": 1,
                                      "timestamp": 1529336865706,
                                      "venueId": 1,
                                    },
                                  ]
            }
            scrollIndex={-1}
>
            [Function]
</ScrollableList>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": [Function],
            "data": Array [
              Object {
                "clientId": 1,
                "createdAt": 1529336865706,
                "id": 1,
                "integrationId": 1,
                "modifiedAt": 1529336865706,
                "name": "Some Event",
                "seasonId": 1,
                "timestamp": 1529336865706,
                "venueId": 1,
              },
              Object {
                "clientId": 1,
                "createdAt": 1529336865706,
                "id": 1,
                "integrationId": 1,
                "modifiedAt": 1529336865706,
                "name": "Some Event",
                "seasonId": 1,
                "timestamp": 1529336865706,
                "venueId": 1,
              },
              Object {
                "clientId": 1,
                "createdAt": 1529336865706,
                "id": 1,
                "integrationId": 1,
                "modifiedAt": 1529336865706,
                "name": "Some Event",
                "seasonId": 1,
                "timestamp": 1529336865706,
                "venueId": 1,
              },
            ],
            "scrollIndex": -1,
          },
          "ref": null,
          "rendered": [Function],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div
                        padding="24px 40px"
            >
                        <styled.h4>
                                    title
                        </styled.h4>
                        <styled.div
                                    height="4px"
                        />
                        <styled.input
                                    data-test-id="event-list-search"
                                    onChange={[Function]}
                                    placeholder="Search"
                                    type="text"
                                    value=""
                        />
            </styled.div>
</styled.div>,
          false,
          <styled.div>
            <ScrollableList
                        data={
                                    Array [
                                                Object {
                                                  "clientId": 1,
                                                  "createdAt": 1529336865706,
                                                  "id": 1,
                                                  "integrationId": 1,
                                                  "modifiedAt": 1529336865706,
                                                  "name": "Some Event",
                                                  "seasonId": 1,
                                                  "timestamp": 1529336865706,
                                                  "venueId": 1,
                                                },
                                                Object {
                                                  "clientId": 1,
                                                  "createdAt": 1529336865706,
                                                  "id": 1,
                                                  "integrationId": 1,
                                                  "modifiedAt": 1529336865706,
                                                  "name": "Some Event",
                                                  "seasonId": 1,
                                                  "timestamp": 1529336865706,
                                                  "venueId": 1,
                                                },
                                                Object {
                                                  "clientId": 1,
                                                  "createdAt": 1529336865706,
                                                  "id": 1,
                                                  "integrationId": 1,
                                                  "modifiedAt": 1529336865706,
                                                  "name": "Some Event",
                                                  "seasonId": 1,
                                                  "timestamp": 1529336865706,
                                                  "venueId": 1,
                                                },
                                              ]
                        }
                        scrollIndex={-1}
            >
                        [Function]
            </ScrollableList>
</styled.div>,
        ],
        "direction": "column",
        "height": "100%",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.div
              padding="24px 40px"
>
              <styled.h4>
                            title
              </styled.h4>
              <styled.div
                            height="4px"
              />
              <styled.input
                            data-test-id="event-list-search"
                            onChange={[Function]}
                            placeholder="Search"
                            type="text"
                            value=""
              />
</styled.div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.h4>
                  title
</styled.h4>,
                <styled.div
                  height="4px"
/>,
                <styled.input
                  data-test-id="event-list-search"
                  onChange={[Function]}
                  placeholder="Search"
                  type="text"
                  value=""
/>,
              ],
              "padding": "24px 40px",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "title",
                },
                "ref": null,
                "rendered": "title",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "height": "4px",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "data-test-id": "event-list-search",
                  "onChange": [Function],
                  "placeholder": "Search",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ScrollableList
              data={
                            Array [
                                          Object {
                                            "clientId": 1,
                                            "createdAt": 1529336865706,
                                            "id": 1,
                                            "integrationId": 1,
                                            "modifiedAt": 1529336865706,
                                            "name": "Some Event",
                                            "seasonId": 1,
                                            "timestamp": 1529336865706,
                                            "venueId": 1,
                                          },
                                          Object {
                                            "clientId": 1,
                                            "createdAt": 1529336865706,
                                            "id": 1,
                                            "integrationId": 1,
                                            "modifiedAt": 1529336865706,
                                            "name": "Some Event",
                                            "seasonId": 1,
                                            "timestamp": 1529336865706,
                                            "venueId": 1,
                                          },
                                          Object {
                                            "clientId": 1,
                                            "createdAt": 1529336865706,
                                            "id": 1,
                                            "integrationId": 1,
                                            "modifiedAt": 1529336865706,
                                            "name": "Some Event",
                                            "seasonId": 1,
                                            "timestamp": 1529336865706,
                                            "venueId": 1,
                                          },
                                        ]
              }
              scrollIndex={-1}
>
              [Function]
</ScrollableList>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": [Function],
              "data": Array [
                Object {
                  "clientId": 1,
                  "createdAt": 1529336865706,
                  "id": 1,
                  "integrationId": 1,
                  "modifiedAt": 1529336865706,
                  "name": "Some Event",
                  "seasonId": 1,
                  "timestamp": 1529336865706,
                  "venueId": 1,
                },
                Object {
                  "clientId": 1,
                  "createdAt": 1529336865706,
                  "id": 1,
                  "integrationId": 1,
                  "modifiedAt": 1529336865706,
                  "name": "Some Event",
                  "seasonId": 1,
                  "timestamp": 1529336865706,
                  "venueId": 1,
                },
                Object {
                  "clientId": 1,
                  "createdAt": 1529336865706,
                  "id": 1,
                  "integrationId": 1,
                  "modifiedAt": 1529336865706,
                  "name": "Some Event",
                  "seasonId": 1,
                  "timestamp": 1529336865706,
                  "venueId": 1,
                },
              ],
              "scrollIndex": -1,
            },
            "ref": null,
            "rendered": [Function],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
